Fix manual entry in the new clipper.

--- a/static/css/clipper.css
+++ b/static/css/clipper.css
@@ -151,6 +151,10 @@ a:hover {
   color: #aaa;
 }
 
+.enter-manually-link {
+  margin-left: 10px;
+}
+
 .entity-results .select-all-link {
   text-align: right;
   margin-right: 10px;
